--- a/QueueManegement/src/components/acessofuncionario/index.css
+++ b/QueueManegement/src/components/acessofuncionario/index.css
@@ -1,7 +1,7 @@
 /* Define a fonte padrão e as cores principais */
 body {
     font-family: Arial, sans-serif; /* Fonte simples e legível */
-    background-color: #5ef8e628; /* Fundo claro para um visual clean */
+    background-color: #f9f9f9; /* Fundo claro para um visual clean */
     color: #333; /* Cor de texto escura para melhor legibilidade */
     margin: 0;
     padding: 20px; 
@@ -67,7 +67,6 @@ body {
   /* Estilo dos inputs e selects */
   input[type="text"],
   input[type="email"],
-  input[type="password"],
   input[type="tel"],
   input[type="date"],
   select {
