--- a/QueueManegement/src/components/home/index.css
+++ b/QueueManegement/src/components/home/index.css
@@ -25,6 +25,7 @@
     background-color: #a6f85e75;
     color: #505050;
     border-radius: 20px;
+    width: 154px;
 }
 
 #homeContainer #butoes .butao:hover
