--- a/QueueManegement/src/NaoUsados/formSignUpLogado/index.css
+++ b/QueueManegement/src/NaoUsados/formSignUpLogado/index.css
@@ -1,11 +1,31 @@
-
-  #cadastroMedico #campoEspecial
+/* Define a fonte padrão e as cores principais */
+body {
+    font-family: Arial, sans-serif; /* Fonte simples e legível */
+    background-color: #5ef8e628; /* Fundo claro para um visual clean */
+    color: #333; /* Cor de texto escura para melhor legibilidade */
+    margin: 0;
+    padding: 20px; 
+    overflow-x: hidden;
+    
+  }
+  
+  /* Estilo do formulário */
+  form {
+    background-color: #ffffff; /* Fundo branco para o formulário */
+    border-radius: 8px; /* Bordas arredondadas */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    padding: 20px; /* Espaçamento interno */
+    max-width: 600px; /* Largura máxima do formulário */
+    margin: auto; /* Centraliza o formulário na página */
+  }
+  
+  #campoEspecial
   {
     display: flex;
     justify-content: space-between;
   }
 
-  #cadastroMedico .fieldDuplo
+  .fieldDuplo
   {
     display: flex;
     justify-content: left;
@@ -14,24 +34,24 @@
 
   }
   /* Estilo dos campos do formulário */
-  #cadastroMedico .field {
+  .field {
     margin-bottom: 15px; /* Espaçamento entre os campos */
   }
   
   /* Estilo dos rótulos */
-  #cadastroMedico label {
+  label {
     display: block; /* Exibe o rótulo como bloco */
     margin-bottom: 5px; /* Espaço abaixo do rótulo */
     font-weight: bold; /* Rótulos em negrito */
   }
   
-  #cadastroMedico .formButton
+  .formButton
   {
     display: flex;
     justify-self: center;
   }
   
-  #cadastroMedico .butao{
+  .butao{
     margin-top: 15px;
     margin-bottom: 15px;
     background-color: #a6f85e75;
@@ -39,16 +59,25 @@
     border-radius: 20px;
     width: 205px;
     height: 44px;
+    cursor: pointer;
+    transition: .2s ease-in;
   }
 
-  #cadastroMedico select{
+  .butao:hover
+  {
+      background-color: #a6f85ecb;
+      transition: .2s ease-out;
+  }
+
+  select{
     text-align: center;
   }
  
   
   /* Estilo dos inputs e selects */
-  #cadastroMedico input[type="text"],
+  input[type="text"],
   input[type="email"],
+  input[type="password"],
   input[type="tel"],
   input[type="date"],
   select {
@@ -63,19 +92,9 @@
   
   
   /* Estilo das mensagens de erro */
-  #cadastroMedico .error {
+  .error {
     color: red; /* Cor vermelha para mensagens de erro */
     font-size: 14px; /* Tamanho da fonte */
     margin-top: 5px; /* Espaço acima da mensagem de erro */
   }
   
-  #cadastroMedico .formButton h2
-{
-  margin-bottom: 35px;
-}
-
-#cadastroMedico .formButton .butao
-{
-  margin-top: 35px;
-  margin-bottom: 35px;
-}
